[package]
name = "whois-monitoring"
version = "0.0.0"
authors = ["Timofey Kulin"]
edition = "2018"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_table = "2.0.0"
chrono = "0.4.7"
config = "0.9.3"
json = "0.11.14"
lettre = "0.9.2"
lettre_email = "0.9.2"
rand = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.98"
serde_yaml = "0.8"
slog = "2.5.2"
slog-async = "2.3.0"
slog-term = "2.4.1"
slog_unwraps = "0.1.5"
structopt = "0.2.18"
whois2 = "0.0.1"
